[equipment, css] prevent flex wrap

--- a/WebSearchableEquipmentDatabase/equipment/static/dataTable/dataTable.css
+++ b/WebSearchableEquipmentDatabase/equipment/static/dataTable/dataTable.css
@@ -1,6 +1,9 @@
 .filterList {
     list-style: none;
 }
+.row {
+    flex-wrap: nowrap;
+}
 
 ul {
     list-style-type: none;
